@@ -2,7 +2,7 @@
  * gEDA - GNU Electronic Design Automation
  * This files is a part of gerbv.
  *
- *   Copyright (C) 2000-2001 Stefan Petersen (spe@stacken.kth.se)
+ *   Copyright (C) 2000-2002 Stefan Petersen (spe@stacken.kth.se)
  *
  * $Id$
  *
@@ -53,6 +53,7 @@ typedef struct instruction {
 typedef struct amacro {
     char *name;
     instruction_t *program;
+    unsigned int nuf_push;  /* Nuf pushes in program to estimate stack size */
     struct amacro *next;
 } amacro_t;
 
