@@ -32,7 +32,7 @@
  * Inparameters used when defining aperture is parameters
  */
 int gerbv_draw_amacro(GdkPixmap *pixmap, GdkGC *gc,
-		      instruction_t *program, double *parameters, int scale,
-		      gint x, gint y);
+		      instruction_t *program, unsigned int nuf_push,
+		      double *parameters, int scale, gint x, gint y);
 
 #endif /* DRAW_AMACRO_H */
